--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^15.0.0",
     "express": "^4.18.1",
-    "mysql": "^2.18.1"
+    "mysql2": "^3.5.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
