--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "backend": "file:",
     "cors": "^2.8.5",
     "dotenv": "^15.0.0",
     "express": "^4.18.1",
-    "mysql": "^2.18.1"
+    "mysql2": "^3.14.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
